testing/error/numSettings.inp
* B GAMMA I II III VI V VII VIII DGYF (JK)
It's the remix to ignition
Hot and fresh out the kitchen
Mama rollin' that body
Got every man in here wishin'
Sippin' on coke and rum (rum)
I'm like so what I'm drunk (drunk)
It's the freakin' weekend baby
I'm about to have me some fun (fun)